--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,7 @@ body {
 }
 
 h1 {
-    font-family: fonts/Inputser;
-    font-size: 2rem;
-    font-weight: 700;
-    color: #000;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+    font-family: "input-serif", serif;
+    font-weight: 400;
+    font-style: normal;
 }
