--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,9 +10,8 @@ body {
 }
 
 h1 {
-    display: flex;
-    justify-content: center;
     font-family: "input-serif", serif;
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -23,3 +22,9 @@ header {
     background-color: #EFE2C5;
 }
 
+div {
+    display: flex;
+    justify-content: center;
+    padding: 0 20px;
+    background-color: #EFE2C5;
+}
