--- a/CSS/home.css
+++ b/CSS/home.css
@@ -7,17 +7,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
-button {
-    background-color: #04AA6D;
-    border: none;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-}
 
 .button {
     background-color: #DFD0AF;
@@ -29,6 +18,7 @@ button {
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
+    font-family: "amiko", sans-serif;
 }
 
 h1 {
@@ -62,10 +52,36 @@ font-weight: 400;
 font-size: 66px;}
     
 p {
-    display: flex;
-    justify-content: center;
-    padding: 0 20px;
-    background-color: #EFE2C5;
     font-family: "amiko", sans-serif;
 font-weight: 400;
 font-size: 22;}
+
+header {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 20px;
+    background-color: #EFE2C5;
+}
+
+.content{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 20px;
+    background-color: #EFE2C5;
+}
+
+.horizontal {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 0 20px;
+    background-color: #EFE2C5;
+}
+
+.platzhalter{
+    height: 390px;
+    width: 340px;
+
+}
