--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,7 +6,7 @@ body {
     height: 460px;
     width: 493px;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
 
 h1 {
@@ -16,13 +16,6 @@ h1 {
 }
 
 header {
-    display: flex;
-    justify-content: center;
-    padding: 0 20px;
-    background-color: #EFE2C5;
-}
-
-div {
     display: flex;
     justify-content: center;
     padding: 0 20px;
