--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,9 @@
+
 body {
-    background-color: #EFE2C5;
+
+    background-image: url("../Images/Home_Background.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .logo{
@@ -19,5 +23,5 @@ header {
     display: flex;
     justify-content: center;
     padding: 0 20px;
-    background-color: #EFE2C5;
+
 }
