--- a/CSS/home.css
+++ b/CSS/home.css
@@ -12,7 +12,7 @@
     background-color: #DFD0AF;
     color: rgb(0, 0, 0);
     text-align: center;
-align-items: center;
+    align-items: center;
     font-size: 24px;
     margin: 4px 2px;
     font-family: "amiko", sans-serif;
@@ -27,8 +27,8 @@ h1 {
     padding: 0 20px;
 
     font-family: "input-serif", serif;
-font-weight: 400;
-font-style: normal;
+    font-weight: 400;
+    font-style: normal;
 }
 
 h2 {
@@ -39,7 +39,8 @@ h2 {
     color: #b34641;
     font-family: "input-serif", serif;
     font-size: 41px;
-font-weight: 400;}
+    font-weight: 400;
+}
 
 h3 {
     display: flex;
@@ -48,13 +49,15 @@ h3 {
 
     color: #b34641;
     font-family: "input-serif", serif;
-font-weight: 400;
-font-size: 66px;}
-    
+    font-weight: 400;
+    font-size: 66px;
+}
+
 p {
     font-family: "amiko", sans-serif;
-font-weight: 400;
-font-size: 22;}
+    font-weight: 400;
+    font-size: 22;
+}
 
 header {
     display: flex;
@@ -65,7 +68,7 @@ header {
 
 }
 
-.content{
+.content {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -81,13 +84,12 @@ header {
 
 }
 
-.platzhalter{
+.platzhalter {
     height: 390px;
     width: 340px;
-
 }
-body {
 
+body {
     background-image: url("../Images/Home_Background.svg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -97,9 +99,9 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    padding: 0 20px;
-    margin-top: 400px;
-    margin-bottom: 400px;
+    padding: 0 20 px;
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
 
 .teasertext {
