--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,4 +1,4 @@
-.flex-container {
+.menu-container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -34,8 +34,6 @@ h1 {
 
 h2 {
     display: flex;
-    justify-content: center;
-    padding: 0 20px;
 
     color: #b34641;
     font-family: "input-serif", serif;
@@ -69,13 +67,6 @@ header {
 
 }
 
-.content {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 20px;
-
-}
 
 .horizontal {
     display: flex;
@@ -91,7 +82,6 @@ header {
 }
 
 body {
-    background-image: url("../Images/Home_Background.svg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -109,8 +99,23 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 0 20px;
-    width: 200px;
+    padding: 40 px;
+    width: 400px;
+    margin: 0px;
+}
+
+.teaserimage {
+ width: 300px;
+}
+
+.ttrechts {
+    text-align: left;
+margin-right: 30px;
+}
+
+.ttlinks {
+    text-align: right;
+
 }
 
 .logo {
@@ -123,12 +128,12 @@ body {
 
 .event {
     margin: 10px;
-    background-color: rgb(225, 213, 213);
+    background-color: #FFFCF5;
     border: #b34641;
     border-style: solid;
-    width: 600px;
+    width: 1000px;
     flex-grow: 4;
-
+   flex-direction: row;
 }
 
 .eventliste {
@@ -142,8 +147,9 @@ body {
 }
 
 .largeimage{
-    height: 20px;
-    width: 20px;
+    margin: 20px;
+    height: 600px;
+
 }
 
 .eventdatum{
@@ -153,16 +159,18 @@ align-items: column;
 
 }
 
-.monat{
+.eventmonat{
     font-size: 20px;
     font-family: "amiko", sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     color: #b34641;
 }
 
 .eventtag{
 font-size: 35px;
 font-family: "input-serif", serif;
+}
 
-
+main {
+background-image: ../images/Home_Background.svg;
 }
