--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,10 +1,3 @@
-.menu-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 10px;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
 
@@ -33,8 +26,6 @@ h1 {
 }
 
 h2 {
-    display: flex;
-
     color: #b34641;
     font-family: "input-serif", serif;
     font-size: 41px;
@@ -45,7 +36,7 @@ h3 {
     display: flex;
     justify-content: center;
     padding: 0 20px;
-
+    align-self: center;
     color: #b34641;
     font-family: "input-serif", serif;
     font-weight: 400;
@@ -95,27 +86,39 @@ body {
     margin-bottom: 200px;
 }
 
-.teasertext {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 40 px;
-    width: 400px;
-    margin: 0px;
-}
 
 .teaserimage {
- width: 300px;
+    width: 300px;
 }
 
-.ttrechts {
-    text-align: left;
-margin-right: 30px;
+.teaserBoxRechts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-left: 30px;
+    flex-direction: column;
+    width: 400px;
+
 }
 
-.ttlinks {
+.teaserBoxLinks {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-right: 30px;
+    flex-direction: column;
+    width: 400px;
+    ;
+}
+
+.teaserTextLinks {
     text-align: right;
+}
 
+.teaserTextRechts {
+    text-align: left;
 }
 
 .logo {
@@ -124,16 +127,15 @@ margin-right: 30px;
     margin-top: 80px;
 }
 
-:root {}
-
 .event {
+    display: flex;
     margin: 10px;
     background-color: #FFFCF5;
-    border: #b34641;
-    border-style: solid;
     width: 1000px;
     flex-grow: 4;
-   flex-direction: row;
+    flex-direction: row;
+    padding: 20px;
+    border-radius: 20px;
 }
 
 .eventliste {
@@ -146,31 +148,98 @@ margin-right: 30px;
     align-items: center;
 }
 
-.largeimage{
+.largeimage {
     margin: 20px;
     height: 600px;
 
 }
 
-.eventdatum{
-align-items: column;
-
-
-
+.eventDatum {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.eventmonat{
+.eventMonat {
+    font-size: 30px;
+    font-family: "input-serif", serif;
+    ;
+    margin: 0;
+}
+
+.eventTag {
+    font-size: 70px;
+    font-family: "input-serif", serif;
+    margin: 0;
+}
+
+.eventTitel {
     font-size: 20px;
-    font-family: "amiko", sans-serif;
-    font-weight: 600;
-    color: #b34641;
-}
-
-.eventtag{
-font-size: 35px;
-font-family: "input-serif", serif;
+    font-family: "input-serif", serif;
+    margin-top: 0;
 }
 
 main {
-background-image: ../images/Home_Background.svg;
+    background-image: url("../Images/Home_Background.svg");
+    background-repeat: no-repeat;
+    background-size: cover
+}
+
+#eventGrün {
+    border: #0b6824;
+    border-width: 5px;
+    border-style: solid;
+}
+
+#eventPink {
+    border: #fa86d9;
+    border-width: 5px;
+    border-style: solid;
+}
+
+#eventRot {
+    border: #7c2c27;
+    border-width: 5px;
+    border-style: solid;
+}
+
+.boxRezensionen {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.userRezension {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 100px;
+    margin-bottom: 200px;
+}
+
+.portraitRezensionen {
+    width: 300px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+}
+
+.nameRezensionen {
+    font-size: 20px;
+    font-family: "amiko", sans-serif;
+    margin-top: 20px;
+    font-style: "bold";
+}
+
+.textRezensionen {
+    font-size: 15px;
+    font-family: "amiko", sans-serif;
+    margin-top: 5px;
+    font-style: "bold";
+}
+
+.datumRezensionen {
+    font-size: 12px;
+    font-family: "amiko", sans-serif;
+    margin-top: 7px;
+    font-style: "bold";
 }
