--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,6 @@
 
 body {
-
-    background-image: url("../Images/Home_Background.svg");
+margin: 0;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -17,6 +16,7 @@ h1 {
     font-family: "input-serif", serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 60px;
 }
 
 header {
@@ -24,4 +24,11 @@ header {
     justify-content: center;
     padding: 0 20px;
 
+}
+
+.menu-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 10px;
 }
