--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -3,3 +3,132 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.sectionCalendar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px
+}
+
+.datumswahl {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    align-items: center;
+}
+
+.datumPfeile {
+    background-color: #DFD0AF;
+    color: #b34641;
+    text-align: center;
+    border-radius: 20%;
+    font-size: 22px;
+    height: 30px;
+    width: 30px;
+    margin: 0px 20px;
+}
+
+.datum {
+    background-color: orange;
+    color: white;
+    font: amiko;
+    font-size: 22px;
+    font-weight: 700;
+    border-radius: 15px;
+    width: 240px;
+    height: 30px;
+    text-align: center;
+}
+
+.mapKalender {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    align-items: center;
+}
+
+.eventKarte {
+    border-radius: 20px;
+    width: 460px;
+}
+
+.suchbox {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    height: 84px;
+    background-color: white;
+    border-radius: 42px;
+    align-items: center;
+  width: 1000px;
+}
+
+#suchIcon {
+    height: 64px;
+border-radius: 32px;
+}
+
+
+.button {
+    background-color: #DFD0AF;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    line-height: 3.5;
+    font-size: 24px;
+    font-family: "amiko", sans-serif;
+    width: 220px;
+    height: 84px;
+    border-radius: 40px;
+}
+.einladungBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #DFD0AF;
+    border-radius: 42px;
+    align-items: center;
+    width: 1000px;
+}
+
+.einladungAnmeldung {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    align-items: center;
+    }
+
+    #anmeldung {
+        background-color: #FFF3D9;
+        color: black;
+        text-align: center;
+        border-radius: 15px;
+        font-size: 22px;
+        height: 30px;
+        width: 220px;
+        margin: 0px 20px;
+    }
+    #registrieren {
+        background-color: orange;
+        color: white;
+        text-align: center;
+        border-radius: 15px;
+        font-size: 22px;
+        height: 30px;
+        width: 220px;
+        margin: 0px 20px;
+    }
