made some small color corrections.

--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -24,7 +24,7 @@ main{
 
 .datumPfeile {
     background-color: #DFD0AF;
-    color: #b34641;
+    color: #bf3a3b;
     text-align: center;
     border-radius: 20%;
     font-size: 22px;
@@ -34,7 +34,7 @@ main{
 }
 
 .datum {
-    background-color: orange;
+    background-color:  #e37e41;
     color: white;
     font: amiko;
     font-size: 22px;
@@ -113,7 +113,7 @@ border-radius: 32px;
         margin: 0px 20px;
     }
     #registrieren {
-        background-color: orange;
+        background-color:  #e37e41;
         color: white;
         text-align: center;
         border-radius: 15px;
@@ -162,9 +162,10 @@ justify-content: center;
 }
 
 #zurKarte {
-    background-color: green;
+    background-color: #047553;
     color: white;
-    justify-content: flex-end;
+align-tracks: center;
+    text-align: end;
     font-family: "input-serif", serif;
     border-radius: 42px;
     font-size: 30px;
@@ -175,7 +176,7 @@ justify-content: center;
 }
 
 #zumKalender {
-    background-color: purple;
+    background-color: #ef85ad;
     color: white;
     justify-content: flex-start;
     font-family: "input-serif", serif;
