Provisorische Version Angebot Page fertig.

--- a/CSS/über uns.css
+++ b/CSS/über uns.css
@@ -1,5 +1,5 @@
-body {
-    background-image: url("../Images/AboutUs_Background.svg");
+main{
+    background-image: url("../Images/Angebot_Background.svg");
     background-repeat: no-repeat;
     background-size: cover;
 }
