--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -137,22 +137,25 @@ text-align: end;
 align-self: flex-end;
  }
  
-.beschreibungTextTitel {
+ .paragraphTitel {
     font: amiko;
     font-size: 24px;
     font-weight: 700;
     color: black;
     margin-top: 10px;
     margin-bottom: 10px;
+    width: 500px;
 }
 
-.beschreibungText {
+.paragraphText {
     font: amiko;
     font-size: 22px;
     font-weight: 400;
     color: black;
     margin-top: 10px;
     margin-bottom: 10px;
+    text-align: start;
+    width: 500px;
 }
 
 .angebotLink {
@@ -170,7 +173,6 @@ align-tracks: center;
     border-radius: 42px;
     font-size: 30px;
     height: 84px;
-    width: 500px;
     padding: 10px;
     margin-right: 100px;
 }
@@ -183,20 +185,11 @@ align-tracks: center;
     border-radius: 42px;
     font-size: 30px;
     height: 84px;
-    width: 500px;
     padding: 10px;
     margin-left: 100px;
 }
 
-.suchbox {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    height: 84px;
-    background-color: white;
-    border-radius: 42px;
-    align-items: center;
-  width: 1000px;}
+#weird{ 
+text-align: center;
+width: 50%;
+}
