--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
-body {
-margin: 0;
-    background-repeat: no-repeat;
-    background-size: cover;
+body  {
+    display: flex;
+    flex-direction: column;
+    align-items: centerl;
+    margin: 0;
+    padding: 0;
+
+}
+main {
+    width: calc(100% - 200px);
+    align-items: center;
 }
 
 a {
@@ -11,7 +18,8 @@ a {
     color: black;
 }
 
-.logo{ height: 100px;
+.logo {
+    height: 100px;
     justify-content: center;
     align-items: center;
     margin-top: 50px;
@@ -19,7 +27,7 @@ a {
 
 .logoHome {
     height: 400px;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 
 h1 {
@@ -59,6 +67,19 @@ header {
     padding: 0 20px;
     flex-direction: column;
     align-items: center;
+}
+
+.toolbar {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    width: calc(80% - 200px);
+    justify-content: flex-end;
+}
+
+.headerIcons {
+    height: 25px;
 }
 
 .menu-container {
@@ -163,11 +184,11 @@ footer {
     margin: 0px;
 }
 
-.footerLogoContainer { 
-display: flex;
-flex-direction: row;
-justify-content: center;
-background-color: #DFD0AF;
+.footerLogoContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #DFD0AF;
 }
 
 .footerLogo {
