--- a/CSS/über uns.css
+++ b/CSS/über uns.css
@@ -1,15 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
 body {
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-main {
     background-image: url("../Images/AboutUs_Background.svg");
+    background-size: cover;
     background-repeat: no-repeat;
-    background-size: cover
+    background-attachment: fixed;
+    background-position: center;
+    margin: 0;
+    width: 100%;
 }
-
 h1 {
     font-family: "input-serif", serif;
     font-weight: 400;
@@ -36,6 +35,7 @@ p {
     font-family: "amiko", sans-serif;
     font-weight: 400;
     font-size: 22;
+    margin-bottom: 10px;
 }
 
 .logoÜberuns {
@@ -44,20 +44,6 @@ p {
     flex-shrink: 0;
     margin-top: 50px;
     margin-bottom: 53px;
-}
-
-.button {
-    background-color: #DFD0AF;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    line-height: 3.5;
-    align-items: center;
-    font-size: 24px;
-    margin: 4px 2px;
-    font-family: "amiko", sans-serif;
-    width: 220px;
-    height: 84px;
-    border-radius: 40px;
 }
 
 .horizontal {
@@ -82,7 +68,7 @@ p {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin-left: 20%;
+    margin-left: 25%;
     flex-direction: column;
     width: 400px;
 }
@@ -100,3 +86,77 @@ p {
     text-align: left;
 }
 
+.teaserTextRechts {
+    text-align: right;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    padding: 0 20px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.headerIcons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.menu-container {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+}
+
+.button-container{
+    flex: 1;
+}
+.buttontest{
+    background-color: #DFD0AF;
+    color: rgb(0, 0, 0);
+    font-family: "amiko", sans-serif;
+    font-size: 1.5rem;
+    border-radius: 50px;
+    padding: 1em;
+    text-align: center;
+    margin: 0;
+    display: block;
+}
+
+.buttonActive2{
+    background-color:#e37e41;
+    color: rgb(0, 0, 0);
+    font-family: "amiko", sans-serif;
+    font-size: 1.5rem;
+    border-radius: 50px;
+    padding: 1em;
+    text-align: center;
+    margin: 0;
+    display: block;
+}
+
+.headerIconSetting {
+    width: auto;
+    height: 22px;
+}
+.headerIconHome {
+    width: auto;
+    height: 22px;
+    margin-top: 0;
+}
+.headerIconLike {
+    width: auto;
+    height: 22px;
+}
+.headerIconProfil {
+    width: auto;
+    height: 22px;
+}
