--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -1,4 +1,4 @@
-main {
+body {
     background-image: url("../Images/Angebot_Background.svg");
     background-repeat: no-repeat;
     background-size: cover;
