--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,33 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
-
-
-.button {
-    background-color: #DFD0AF;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    line-height: 3.5;
-    align-items: center;
-    font-size: 24px;
-    margin: 4px 2px;
-    font-family: "amiko", sans-serif;
-    width: 220px;
-    height: 84px;
-    border-radius: 40px;
-}
-
-
-p {
-    font-family: "amiko", sans-serif;
-    font-weight: 400;
-    font-size: 22;
-}
-
-
 body {
     background-image: url("../Images/Home_Background.svg");
     background-repeat: no-repeat;
-    background-size: cover
+    background-size: cover;
+  
 }
 
 .teaser {
@@ -79,7 +56,7 @@ body {
     display: flex;
     margin: 10px;
     background-color: #FFFCF5;
-    width: 60%;
+    width: 80%;
     flex-direction: row;
     padding: 20px;
     border-radius: 20px;
