--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
-body  {
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
-    padding: 0;
-
+    margin: 0px;
 }
 
 a {
@@ -29,7 +27,6 @@ a {
 h1 {
     display: flex;
     justify-content: center;
-    padding: 0 20px;
     font-family: "input-serif", serif;
     font-weight: 400;
     font-style: normal;
@@ -70,13 +67,14 @@ header {
     grid-template-columns: 1fr 1fr;
     margin-top: 10px;
     margin-bottom: 0px;
-    width: calc(80% - 200px);
+    width: calc(90%);
 }
 
 .headerIcons {
     height: 25px;
 
 }
+
 .toolbarLeft {
     grid-column: 1;
     display: flex;
@@ -86,7 +84,7 @@ header {
 .toolbarRight {
     grid-column: 2;
     display: flex;
-justify-content: flex-end;
+    justify-content: flex-end;
 }
 
 .menu-container {
@@ -103,24 +101,17 @@ justify-content: flex-end;
     color: rgb(0, 0, 0);
     text-align: center;
     line-height: 3.5;
+    align-items: center;
     font-size: 24px;
+    margin: 0px 20px 20px 00px;
     font-family: "amiko", sans-serif;
     width: 220px;
     height: 84px;
     border-radius: 40px;
 }
 
-.buttonActive {
+#buttonActive {
     background-color: #e37e41;
-    color: black;
-    font-weight: 700;
-    text-align: center;
-    line-height: 3.5;
-    font-size: 24px;
-    font-family: "amiko", sans-serif;
-    width: 220px;
-    height: 84px;
-    border-radius: 40px;
 }
 
 
@@ -144,7 +135,7 @@ footer {
     margin-top: 0px;
 }
 
-.footerLogosContainer {
+.footerSoMeContainer {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -203,4 +194,22 @@ footer {
 .footerLogo {
     margin: 10px;
     height: 80px;
+}
+
+@media screen and (max-width: 820px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    .button {
+        font-size: 18px;
+        width: 150px;
+        height: 70px;
+        line-height: 2.5;
+        text-align: center;
+    }
+
+    #rezensionTobias {
+        display: none;
+    }
 }
