--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -4,6 +4,9 @@ body {
     background-size: cover;
 }
 
+main {
+    width: 60%;
+}
 
 .sectionCalendar {
     display: flex;
@@ -56,21 +59,21 @@ body {
 
 .eventKarte {
     border-radius: 20px;
-    width: 460px;
+    width: 50%;
+    margin: 0px 10px 0px 10px;
 }
 
 .suchbox {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px 0px 10px 0px;
     padding: 10px;
     height: 84px;
     background-color: white;
     border-radius: 42px;
     align-items: center;
-    width: 1000px;
+    width: 100%;
 }
 
 #suchIcon {
@@ -89,17 +92,18 @@ body {
     background-color: #DFD0AF;
     border-radius: 42px;
     align-items: center;
-    width: 1000px;
+    width: 100%;
 }
 
 .einladungAnmeldung {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
     align-items: center;
+    width: 60%;
 }
 
 #anmeldung {
@@ -109,7 +113,8 @@ body {
     border-radius: 15px;
     font-size: 22px;
     height: 30px;
-    width: 220px;
+    min-width: 180px;
+    width: 50%;
     margin: 0px 20px;
 }
 
@@ -120,7 +125,8 @@ body {
     border-radius: 15px;
     font-size: 22px;
     height: 30px;
-    width: 220px;
+    min-width: 180px;
+    width: 50%;
     margin: 0px 20px;
 }
 
@@ -136,6 +142,15 @@ body {
 #schnöigge {
     text-align: end;
     align-self: flex-end;
+    width: 70%;
+}
+
+.paragraph {
+    align-self: center;
+    width: 60%;
+    max-width: 500px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .paragraphTitel {
@@ -145,7 +160,7 @@ body {
     color: black;
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 500px;
+    width: 100%;
 }
 
 .paragraphText {
@@ -156,7 +171,6 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
     text-align: start;
-    width: 500px;
 }
 
 .angebotLink {
@@ -190,7 +204,27 @@ body {
     margin-left: 100px;
 }
 
+#impressum {margin-top: 100px;}
+
 #weird {
     text-align: center;
-    width: 50%;
+    align-self: center;
+    width: 80%;
+}
+
+#verein {text-align: end;
+align-self: flex-end;}
+
+.roundImage {
+    aspect-ratio: 1/1;;
+    width: 300px;
+    border-radius: 50% ;}
+
+
+@media screen and (max-width: 820px) {
+    main {
+        width: 90%;
+    }
+
+
 }
