--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,6 +2,7 @@
 
 body {
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
     align-items: center;
     margin: 0px;
@@ -101,8 +102,7 @@ header {
     color: rgb(0, 0, 0);
     text-align: center;
     line-height: 3.5;
-    align-items: center;
-    font-size: 24px;
+    font-size: 22px;
     margin: 0px 20px 20px 00px;
     font-family: "amiko", sans-serif;
     width: 220px;
