--- a/CSS/Angebot.css
+++ b/CSS/Angebot.css
@@ -179,6 +179,10 @@ main {
     justify-content: center;
 }
 
+#beerpong {
+width: 100%;
+}
+
 #zurKarte {
     background-color: #047553;
     color: white;
@@ -221,10 +225,21 @@ align-self: flex-end;}
     border-radius: 50% ;}
 
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 850px) {
     main {
         width: 90%;
     }
 
+}
 
+@media screen and(max-width: 450px) {
+    
+    .paragraph {
+        width: 100%;
+    }
+
+    .einladungAnmeldung{
+        flex-wrap: wrap;
+    }
+    
 }
