--- a/CSS/main.css
+++ b/CSS/main.css
@@ -21,7 +21,8 @@ a {
 }
 
 .logoHome {
-    height: 400px;
+    width: 80%;
+    max-width: 400px;
     margin-top: 10px;
 }
 
@@ -47,6 +48,8 @@ h3 {
     font-weight: 400;
     font-size: 66px;
     text-align: center;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 p {
@@ -99,6 +102,19 @@ header {
 
 .button {
     background-color: #DFD0AF;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    line-height: 3.5;
+    font-size: 22px;
+    margin: 0px 20px 20px 00px;
+    font-family: "amiko", sans-serif;
+    width: 220px;
+    height: 84px;
+    border-radius: 40px;
+}
+
+.button:hover {
+    background-color: brown;
     color: rgb(0, 0, 0);
     text-align: center;
     line-height: 3.5;
@@ -208,8 +224,59 @@ footer {
         line-height: 2.5;
         text-align: center;
     }
-
-    #rezensionTobias {
-        display: none;
+    .button:hover {
+        background-color: brown;
+        font-size: 18px;
+        width: 150px;
+        height: 70px;
+        line-height: 2.5;
+        text-align: center;
     }
+    .menu-container {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width:450px) {
+
+footer{grid-template-columns: 1fr;}
+
+#footerColumn1 {
+    grid-column: 1;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    padding: 10px;
+}
+
+#footerColumn2 {
+    grid-column: 1;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    padding: 10px;
+}
+
+#footerColumn3 {
+    grid-column: 1;
+    grid-row-start: 6;
+    grid-row-end: 7;
+    padding: 10px;
+}
+
+#footerColumn4 {
+    grid-column: 1;
+    grid-row-start: 8;
+    grid-row-end: 9;
+    padding: 10px;
+}
+.footerSoMeContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+h3 {
+    font-size: 30px;}
+
+
 }
