--- a/CSS/ueberuns.css
+++ b/CSS/ueberuns.css
@@ -1,63 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
 body {
-    background-image: url("../Images/AboutUs_Background.svg");
+    background-image: url("../Images/Angebot_Background.svg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+    background-position: start;
     margin: 0;
 }
 
-.logoÜberuns {
-    width: 64px;
-    height: 125px;
-    flex-shrink: 0;
-    margin-top: 50px;
-    margin-bottom: 53px;
-}
 
-.horizontal {
+
+.salut {
     display: flex;
-    justify-content: center;
-    flex-direction: row;
-    padding: 0 20px;
-
+    justify-content: space-around;
+    flex-direction: column;
+    width: 100%;
+    max-width: 600px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
+
 .teaserBoxLinks {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-end;
+    justify-content: space-around;
     margin-right: 25%;
     flex-direction: column;
-    width: 400px;
 }
 
 .teaserBoxRechts {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: flex-end;
+    justify-content: space-around;
     margin-left: 25%;
     flex-direction: column;
-    width: 400px;
 }
 
-.Salut {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    padding: 0 20 px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
 
 .teaserTextLinks {
+    align-self: flex-start;
     text-align: left;
 }
 
 .teaserTextRechts {
+    align-self: flex-end;
     text-align: right;
 }
 
@@ -67,15 +55,6 @@ header {
     padding: 0 20px;
     flex-direction: column;
     align-items: center;
-}
-
-.headerIcons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0 20px;
-    margin-top: 50px;
-    width: 100%;
 }
 
 .menu-container {
@@ -90,51 +69,28 @@ header {
 .button-container{
     flex: 1;
 }
-.buttontest{
-    background-color: #DFD0AF;
-    color: rgb(0, 0, 0);
-    font-family: "amiko", sans-serif;
-    font-size: 1.5rem;
-    border-radius: 50px;
-    padding: 1em;
-    text-align: center;
-    margin: 0;
-    display: block;
+
+
+.team {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+  flex-wrap: wrap;
+    width: 100%;
+    gap: 10px;
 }
 
-.buttonActive2{
-    background-color:#e37e41;
-    color: rgb(0, 0, 0);
-    font-family: "amiko", sans-serif;
-    font-size: 1.5rem;
-    border-radius: 50px;
-    padding: 1em;
-    text-align: center;
-    margin: 0;
-    display: block;
-}
-
-.headerIconSetting {
-    width: auto;
-    height: 22px;
-}
-.headerIconHome {
-    width: auto;
-    height: 22px;
-    margin-top: 0;
-}
-.headerIconLike {
-    width: auto;
-    height: 22px;
-}
-.headerIconProfil {
-    width: auto;
-    height: 22px;
+.bildPortrait {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    margin-bottom: 20px;
 }
 
 .containerPortrait {
     position: relative;
-    width: 29%;
+    width: 30%;
+    min-width: 200px;
     border-radius: 50%;
   }
 
@@ -144,6 +100,7 @@ header {
 
 .overlay {
     position: absolute;
+    aspect-ratio: 1/1;
     top: 0;
     bottom: 0;
     left: 0;
@@ -152,6 +109,7 @@ header {
     transition: .5s ease;
     background-color:rgba(211, 211, 211, 0.494);
     border-radius: 50%;
+    width: 100%;
     }
 
 .portraitText {
@@ -163,3 +121,42 @@ header {
     -ms-transform: translate(-50%, -50%);
     }
     
+.textTeam {
+align-self: flex-start;
+padding-left: 50px;
+width: 50%;
+min-width: 300px;
+}
+
+.ideeTextBox {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: space-between;
+}
+
+.ideeTextSpalte {
+    width: calc(50% - 10px);
+min-width: 300px;
+text-align: justify;
+}
+
+.placeholder {
+    width: 100%;
+    height: 150px;
+}
+
+.vision {
+align-self: flex-end;
+width: 30%;
+min-width: 200px;
+}
+
+@media screen and (max-width:450px) {
+    .textTeam {
+        align-self: flex-start;
+        padding-left: 0px;
+        min-width: 300px;
+    }
+    
+}
