--- a/CSS/home.css
+++ b/CSS/home.css
@@ -9,15 +9,14 @@ body {
 
 .teaser {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: row;
     padding: 0 20 px;
-    margin-top: 200px;
     margin-bottom: 200px;
 }
 
 .teaserimage {
-    width: 300px;
+    width: 40%;
 }
 
 .teaserBoxRechts {
@@ -26,8 +25,7 @@ body {
     align-items: flex-start;
     justify-content: flex-start;
     margin-left: 30px;
-    flex-direction: column;
-    width: 400px;
+    width: 50%;
 
 }
 
@@ -37,9 +35,7 @@ body {
     align-items: flex-end;
     justify-content: flex-end;
     margin-right: 30px;
-    flex-direction: column;
-    width: 400px;
-    ;
+    width: 50%;
 }
 
 .teaserTextLinks {
@@ -50,7 +46,13 @@ body {
     text-align: left;
 }
 
-
+#spass {
+align-self: flex-end;
+width: 100%;
+text-align: right;
+margin-top: 0px;
+margin-bottom: 100px;
+}
 
 .event {
     display: flex;
@@ -67,14 +69,12 @@ body {
     justify-content: center;
     flex-direction: column;
     padding: 0 20px;
-    margin-top: 200px;
-    margin-bottom: 200px;
+        margin-bottom: 200px;
     align-items: center;
 }
 
 .largeimage {
-    margin: 20px;
-    height: 600px;
+    width: 100%;
 
 }
 
@@ -132,8 +132,8 @@ body {
     align-items: center;
     margin-left: 30px;
     margin-right: 30px;
-    margin-bottom: 200px;
 }
+
 
 .portraitRezensionen {
     width: 300px;
@@ -173,9 +173,24 @@ body {
 
 @media screen and (max-width: 450px) {
     .teaser{ flex-direction: column;}
+    .reverse{flex-direction: column-reverse;}
     .boxRezensionen{flex-direction: column;}
-
+#rezensionTobias {display: flex;}
     .paragraph {
         width: 100%;
+    }
+    .userRezension {
+        margin-bottom: 100px;
+    }
+    .teaserimage {
+        width: 100%;
+    }
+    .teaserBoxLinks {
+        width: 100%;
+        margin-right: 0px;
+    }
+    .teaserBoxRechts {
+        width: 100%;
+        margin-left: 0px;
     }
 }
