--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,6 +14,14 @@ main {
     align-items: center;
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+margin: 0;
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -70,6 +78,8 @@ header {
     padding: 0 20px;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 100px;
+    width: 60%;
 }
 
 .toolbar {
@@ -112,24 +122,15 @@ header {
     text-align: center;
     line-height: 3.5;
     font-size: 22px;
-    margin: 0px 20px 20px 00px;
+    margin: 10px;
     font-family: "amiko", sans-serif;
-    width: 220px;
-    height: 84px;
+    width: 20%;
     border-radius: 40px;
 }
 
 .button:hover {
     background-color: brown;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    line-height: 3.5;
-    font-size: 22px;
-    margin: 0px 20px 20px 00px;
-    font-family: "amiko", sans-serif;
-    width: 220px;
-    height: 84px;
-    border-radius: 40px;
+
 }
 
 #buttonActive {
@@ -146,6 +147,7 @@ footer {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr 1fr 1fr 1fr;
     padding: 30px;
+    margin-top: 200px;
 }
 
 .footerTextContainer {
