--- a/CSS/home.css
+++ b/CSS/home.css
@@ -17,6 +17,7 @@ body {
 
 .teaserimage {
     width: 40%;
+    height: auto;
 }
 
 .teaserBoxRechts {
@@ -142,14 +143,13 @@ margin-bottom: 100px;
 }
 
 .nameRezensionen {
-    font-size: 20px;
+    font-size: 25px;
     font-family: "amiko", sans-serif;
     margin-top: 20px;
     font-style: "bold";
 }
 
 .textRezensionen {
-    font-size: 15px;
     font-family: "amiko", sans-serif;
     margin-top: 5px;
     font-style: "bold";
@@ -158,7 +158,7 @@ margin-bottom: 100px;
 }
 
 .datumRezensionen {
-    font-size: 12px;
+    font-size: 15px;
     font-family: "amiko", sans-serif;
     margin-top: 7px;
     font-style: "bold";
