--- a/CSS/main.css
+++ b/CSS/main.css
@@ -44,6 +44,7 @@ h1 {
     display: flex;
     justify-content: center;
     font-family: "input-serif", serif;
+    text-align: center;
     font-weight: 400;
     font-style: normal;
     font-size: 60px;
@@ -69,7 +70,7 @@ h3 {
 p {
     font-family: "amiko", sans-serif;
     font-weight: 400;
-    font-size: 24;
+    font-size: 20px;
 }
 
 header {
@@ -125,6 +126,7 @@ header {
     margin: 10px;
     font-family: "amiko", sans-serif;
     width: 20%;
+    min-width: 170px;
     border-radius: 40px;
 }
 
@@ -137,7 +139,10 @@ header {
     background-color: #e37e41;
 }
 
-
+.menu {
+width: 20%;
+max-width: 150px;
+}
 
 
 footer {
@@ -224,6 +229,8 @@ footer {
     h1 {
         font-size: 40px;
     }
+
+main {width: 80%;}
 
     .button {
         font-size: 18px;
