--- a/CSS/main.css
+++ b/CSS/main.css
@@ -73,6 +73,10 @@ p {
     font-size: 20px;
 }
 
+#impressum {
+    margin-top: 100px;
+}
+
 header {
     display: flex;
     justify-content: center;
