--- a/CSS/kontakt.css
+++ b/CSS/kontakt.css
@@ -36,7 +36,7 @@ main {
     justify-content: space-between;
     margin: 0px;
     width: 100%;
-    align-self: flex-end;
+    flex-wrap: wrap;
 }
 
 .kontaktDaten {
@@ -49,6 +49,7 @@ main {
     color: white;
     text-align: center;
     width: 45%;
+    min-width: 200px;
 }
 
 .kontaktFormularContainer {
@@ -63,6 +64,7 @@ main {
     border-radius: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-bottom: 200px;
 }
 
 
@@ -83,8 +85,9 @@ main {
     border: none;
     font-family: "amiko", sans-serif;
     font-size: 20px;
-    height: 300px;
+    height: 400px;
     color: #b34641;
+    margin-bottom: 5px;
 }
 
 #name {
@@ -94,6 +97,7 @@ main {
     font-size: 20px;
     border-bottom: #b34641 solid 2px;
     color: #b34641;
+    margin-bottom: 5px;
 }
 
 #email {
@@ -103,6 +107,7 @@ main {
     font-size: 20px;
     border-bottom: #b34641 solid 2px;
     color: #b34641;
+    margin-bottom: 5px;
 }
 
 #absenden {
@@ -112,7 +117,39 @@ main {
     margin: 10px;
     border-radius: 100px;
     font-family: "amiko", sans-serif;
+    font-size: 20px;
     color: white;
     text-align: center;
     width: 45%;
+    align-self: flex-start;
+    box-shadow: none;
+    border: none;
+}
+
+@media screen and (max-width: 820px) {
+
+    main {
+        width: 80%;
+    }
+    .kontaktUeberschriftContainer {
+        width: 80%;
+    }
+    .kontaktFormularContainer {
+        width: 80%;
+    }
+
+}
+
+@media screen and (max-width:450px) {
+
+    main {
+        width: 90%;
+    }
+    .kontaktUeberschriftContainer {
+        width: 100%;
+    }
+    .kontaktFormularContainer {
+        width: 100%;
+    }
+
 }
