--- a/CSS/impressum.css
+++ b/CSS/impressum.css
@@ -7,10 +7,15 @@
     margin-bottom: 50px;
 }
 
-#container {
-    max-width: 100%;
+.impressumContainer {
+    display: flex;
+    width: 70%;
     text-align: flex-start;
+    align-items: flex-start;
+
 }
+
+.impressumText {    text-align: left;}
 
 h1 {
     color: #b34641;
@@ -22,4 +27,21 @@ body {
 
 .pageTitle {
 align-self: flex-start;
+}
+
+
+@media screen and (max-width: 820px) {
+    
+        .impressumContainer {
+            width: 100%;
+        }
+}
+
+@media screen and (max-width:450px) {
+
+    .impressumContainer {
+        width: 100%;
+    }
+
+    h2{ font-size: 25px;}
 }
