--- a/CSS/ueberuns.css
+++ b/CSS/ueberuns.css
@@ -59,7 +59,7 @@ body {
     gap: 10px;
 }
 
-.button-container{
+.button-container {
     flex: 1;
 }
 
@@ -68,7 +68,7 @@ body {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
-  flex-wrap: wrap;
+    flex-wrap: wrap;
     width: 100%;
     gap: 10px;
 }
@@ -85,11 +85,11 @@ body {
     width: 30%;
     min-width: 200px;
     border-radius: 50%;
-  }
+}
 
 .containerPortrait:hover .overlay {
     opacity: 1;
-  }
+}
 
 .overlay {
     position: absolute;
@@ -99,13 +99,13 @@ body {
     right: 0;
     opacity: 0;
     transition: .5s ease;
-    background-color:#dfd0af92;
+    background-color: #dfd0af92;
     border-radius: 50%;
     width: 100%;
     aspect-ratio: 1/1;
     margin-bottom: 20px;
     overflow: hidden;
-    }
+}
 
 .portraitText {
     color: black;
@@ -121,45 +121,45 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    }
+}
 
 .portraitTitle {
     font-size: 1em;
     text-align: center;
     margin: 0;
     padding: 0;
-    }
+}
 
 .portraitFunction {
     font-size: 0.7em;
     font-weight: bold;
-   
-    }
+
+}
 
 .portraitDescription {
     font-size: 0.7em;
     margin: 0;
     padding: 0;
-    }
-    
+}
+
 .textTeam {
-align-self: flex-start;
-padding-left: 50px;
-width: 50%;
-min-width: 300px;
+    align-self: flex-start;
+    padding-left: 50px;
+    width: 50%;
+    min-width: 300px;
 }
 
 .ideeTextBox {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .ideeTextSpalte {
     width: calc(50% - 10px);
-min-width: 300px;
-text-align: justify;
+    min-width: 300px;
+    text-align: justify;
 }
 
 .placeholder {
@@ -173,10 +173,11 @@ text-align: justify;
     text-align: right;
 
 }
+
 .vision {
     align-self: flex-end;
-width: 50%;
-min-width: 200px;
+    width: 50%;
+    min-width: 200px;
 }
 
 .video {
@@ -188,10 +189,11 @@ min-width: 200px;
 
 
 .kontaktTextBox {
- display: flex;
- flex-direction: column;
- width: 80%;
- text-align: left;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    text-align: left;
+    align-self: flex-start;
 }
 
 .kontaktText {
@@ -208,12 +210,32 @@ min-width: 200px;
     text-align: start;
 }
 
+#adresseBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    ;
+    margin-top: 50px;
+    align-self: flex-end;
+}
+
+.adresse {
+    text-align: right;
+    margin: 0px;
+    padding: 0px;
+}
+
+
 @media screen and (max-width:820px) {
-  
-    .containerPortrait:target .overlay {
+
+   .containerPortrait:checked .overlay {
         opacity: 1;
-      }
-  
+    }
+
+    .containerPortrait:checked .overlay {
+        opacity: 1;
+    }
+
     .textTeam {
         align-self: flex-start;
         padding-left: 0px;
@@ -228,7 +250,7 @@ min-width: 200px;
         min-width: 300px;
     }
 
-    .containerPortrait:target .overlay {
+    .containerPortrait input:checked~.overlay {
         opacity: 1;
-      }
+    }
 }
