Images bei responsiveness gefixxt,

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -167,6 +167,7 @@ footer {
     flex-direction: column;
     font-size: 20px;
     margin-top: 0px;
+    width: 100%;
 }
 
 .footerSoMeContainer {
@@ -263,7 +264,9 @@ main {width: 80%;}
         width: 90%;
     }
 
-footer{grid-template-columns: 1fr;}
+footer{
+   
+    grid-template-columns: 1fr;}
 
 #footerColumn1 {
     grid-column: 1;
