--- a/CSS/angebot.css
+++ b/CSS/angebot.css
@@ -239,6 +239,10 @@ text-align: center;
     border-radius: 50%;
 }
 
+#basketball {
+    margin-top: 200px;
+}
+
 
 @media screen and (max-width: 850px) {
     main {
