--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,6 +14,10 @@ main {
     align-items: center;
 }
 
+.tabLogo {
+   width: 50%;
+}
+
 section {
     display: flex;
     flex-direction: column;
@@ -137,7 +141,7 @@ header {
 }
 
 .button:hover {
-    background-color: brown;
+    background-color: #bf3a3b;
 
 }
 
